--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "5.0.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://PeyPeyPG.github.io/React_Test",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
